@@ -14,6 +14,11 @@ def _wrap_coclass(self):
     result.__dict__["__clsid"] = str(self._reg_clsid_)
     return result
 
+def _coclass_from_param(cls, obj):
+    if isinstance(obj, (cls._com_interfaces_[0], cls)):
+        return obj
+    raise TypeError(obj)
+
 #
 # The mro() of a POINTER(App) type, where class App is a subclass of CoClass:
 #
@@ -28,8 +33,8 @@ def _wrap_coclass(self):
 class _coclass_meta(type):
     # metaclass for CoClass
     #
-    # If a CoClass subclass is created, create a POINTER(...) type for
-    # that class, with bases <coclass> and c_void_p.  Also, the
+    # When a CoClass subclass is created, create a POINTER(...) type
+    # for that class, with bases <coclass> and c_void_p.  Also, the
     # POINTER(...) type gets a __ctypes_from_outparam__ method which
     # will QueryInterface for the default interface: the first one on
     # the coclass' _com_interfaces_ list.
@@ -42,8 +47,10 @@ class _coclass_meta(type):
             clsid = namespace["_reg_clsid_"]
             comtypes.com_coclass_registry[str(clsid)] = klass
         PTR = _coclass_pointer_meta("POINTER(%s)" % klass.__name__,
-                                  (klass, c_void_p),
-                                  {"__ctypes_from_outparam__": _wrap_coclass})
+                                    (klass, c_void_p),
+                                    {"__ctypes_from_outparam__": _wrap_coclass,
+                                     "from_param": classmethod(_coclass_from_param),
+                                     })
         from ctypes import _pointer_type_cache
         _pointer_type_cache[klass] = PTR
 
